Use 2015 data & remove holdout set (#5)
* finish download module changes

* download notebook

* rerun split data module

* rerun download module

* rerun train_model

* rerun evaluation module

* rerun interpretation module

* combine datasets

* combine datasets

* split changes

* update format

* format update

* format

* finish split data

* combine datasets, remove holdout

* formatting

* rerun pipelines

* remove folded class

* rerun pipeline

* Update utils/download_utils.py

Co-authored-by: Dave Bunten <ekgto445@gmail.com>

* PR fixes

* module docstrings

Co-authored-by: Dave Bunten <ekgto445@gmail.com>

--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "\n",
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
-    "from split_utils import get_features_data, get_random_images_indexes, get_representative_images, get_image_indexes"
+    "from split_utils import get_features_data"
    ]
   },
   {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4474, 1293)\n"
+      "(5460, 1292)\n"
      ]
     }
    ],
@@ -52,53 +52,30 @@
     "training_data = get_features_data(load_path)\n",
     "print(training_data.shape)\n",
     "\n",
-    "# number of images to holdout\n",
-    "num_holdout_images = 5\n",
     "# ratio of data to be reserved for testing (ex 0.15 = 15%)\n",
     "test_ratio = 0.15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3996, 1293)\n"
+      "(4640, 1292)\n"
      ]
     }
    ],
    "source": [
-    "# remove holdout indexes\n",
-    "images = get_representative_images(training_data, num_holdout_images, 10000)\n",
-    "holdout_image_indexes = get_image_indexes(training_data, images)\n",
-    "training_data = training_data.drop(pd.Index(data=holdout_image_indexes))\n",
-    "print(training_data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3398, 1293)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# remove test indexes\n",
     "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
     "test_data = training_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
     "    lambda x: x.sample(frac=test_ratio)\n",
     ")\n",
     "test_indexes = test_data.index\n",
+    "# remove test indexes\n",
     "training_data = training_data.drop(pd.Index(data=test_indexes))\n",
     "\n",
     "train_indexes = np.array(training_data.index)\n",
@@ -107,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,28 +115,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>holdout</td>\n",
-       "      <td>3291</td>\n",
+       "      <td>test</td>\n",
+       "      <td>1785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>holdout</td>\n",
-       "      <td>3292</td>\n",
+       "      <td>test</td>\n",
+       "      <td>4524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>holdout</td>\n",
-       "      <td>3293</td>\n",
+       "      <td>test</td>\n",
+       "      <td>1045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>holdout</td>\n",
-       "      <td>3294</td>\n",
+       "      <td>test</td>\n",
+       "      <td>1046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>holdout</td>\n",
-       "      <td>3295</td>\n",
+       "      <td>test</td>\n",
+       "      <td>3474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -167,53 +144,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4469</th>\n",
+       "      <th>5455</th>\n",
        "      <td>train</td>\n",
-       "      <td>4646</td>\n",
+       "      <td>5518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4470</th>\n",
+       "      <th>5456</th>\n",
        "      <td>train</td>\n",
-       "      <td>4647</td>\n",
+       "      <td>5519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4471</th>\n",
+       "      <th>5457</th>\n",
        "      <td>train</td>\n",
-       "      <td>4648</td>\n",
+       "      <td>5520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4472</th>\n",
+       "      <th>5458</th>\n",
        "      <td>train</td>\n",
-       "      <td>4650</td>\n",
+       "      <td>5521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4473</th>\n",
+       "      <th>5459</th>\n",
        "      <td>train</td>\n",
-       "      <td>4652</td>\n",
+       "      <td>5522</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4474 rows × 2 columns</p>\n",
+       "<p>5460 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        label  index\n",
-       "0     holdout   3291\n",
-       "1     holdout   3292\n",
-       "2     holdout   3293\n",
-       "3     holdout   3294\n",
-       "4     holdout   3295\n",
-       "...       ...    ...\n",
-       "4469    train   4646\n",
-       "4470    train   4647\n",
-       "4471    train   4648\n",
-       "4472    train   4650\n",
-       "4473    train   4652\n",
+       "      label  index\n",
+       "0      test   1785\n",
+       "1      test   4524\n",
+       "2      test   1045\n",
+       "3      test   1046\n",
+       "4      test   3474\n",
+       "...     ...    ...\n",
+       "5455  train   5518\n",
+       "5456  train   5519\n",
+       "5457  train   5520\n",
+       "5458  train   5521\n",
+       "5459  train   5522\n",
        "\n",
-       "[4474 rows x 2 columns]"
+       "[5460 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,8 +198,6 @@
    "source": [
     "# create pandas dataframe with all indexes and their respective labels\n",
     "index_data = []\n",
-    "for index in holdout_image_indexes:\n",
-    "    index_data.append({\"label\": \"holdout\", \"index\": index})\n",
     "for index in test_indexes:\n",
     "    index_data.append({\"label\": \"test\", \"index\": index})\n",
     "for index in train_indexes:\n",
@@ -240,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
