--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -52,7 +52,7 @@
     "train_data = get_dataset(features_dataframe, data_split_indexes, \"train\")\n",
     "test_data = get_dataset(features_dataframe, data_split_indexes, \"test\")\n",
     "\n",
-    "save_dir = pathlib.Path(\"class_precision_recall_curves/\")\n",
+    "save_dir = pathlib.Path(\"evaluations/class_precision_recall_curves/\")\n",
     "save_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -518,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('phenotypic_profiling')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -532,12 +532,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f9df586d1764dbc68785000a153dad1832127ac564b5e2e4c94e83fc43160b30"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
