rename cm files

--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -160,7 +160,7 @@
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
     "        # path to save confusion matrix tidy data to\n",
-    "        cm_save_path = pathlib.Path(f\"{cm_dir}/{model_name}_{label}_cm.tsv\")\n",
+    "        cm_save_path = pathlib.Path(f\"{cm_dir}/{model_name}__{label}__cm.tsv\")\n",
     "        \n",
     "        cm = model_cm(model, data)\n",
     "        \n",
