--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -148,12 +148,13 @@
     "# directory to load the models from\n",
     "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
     "\n",
-    "# iterate through each model\n",
+    "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "for model_path in models_dir.iterdir():\n",
     "    model = load(model_path)\n",
     "    model_name = model_path.name.replace(\"log_reg_\",\"\").replace(\".joblib\",\"\")\n",
     "    \n",
-    "    # iterate through label datasets\n",
+    "    # iterate through label datasets (labels correspond to train, test, etc)\n",
+    "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
     "        print(f\"Evaluating {model_name} on dataset {label}\")\n",
     "        \n",
@@ -164,7 +165,10 @@
     "        \n",
     "        cm = model_cm(model, data)\n",
     "        \n",
+    "        # use stack to restructure dataframe into tidy long format\n",
     "        cm_tidy_data = cm.stack()\n",
+    "        # reset index must be used to make indexes at level 0 and 1 into individual columns\n",
+    "        # these columns correspond to true label and predicted label, and are set as indexes after using stack()\n",
     "        cm_tidy_data = pd.DataFrame(cm_tidy_data).reset_index(level=[0,1])\n",
     "        cm_tidy_data.columns = [\"True_Label\", \"Predicted_Label\", \"Count\"]\n",
     "        cm_tidy_data.to_csv(cm_save_path, sep=\"\\t\")"
