--- a/3.evaluate_model/F1_scores.ipynb
+++ b/3.evaluate_model/F1_scores.ipynb
@@ -134,12 +134,13 @@
     "# directory to load the models from\n",
     "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
     "\n",
-    "# iterate through models\n",
+    "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "for model_path in models_dir.iterdir():\n",
     "    model = load(model_path)\n",
     "    model_name = model_path.name.replace(\"log_reg_\",\"\").replace(\".joblib\",\"\")\n",
     "    \n",
-    "    # iterate through label datasets\n",
+    "    # iterate through label datasets (labels correspond to train, test, etc)\n",
+    "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
     "        print(f\"Evaluating {model_name} on dataset {label}\")\n",
     "        # load dataset (train, test, etc)\n",
@@ -148,8 +149,11 @@
     "        score_save_path = pathlib.Path(f\"{f1_scores_dir}/{model_name}_{label}.tsv\")\n",
     "        # find model scores on dataset\n",
     "        score = model_score(model, data)\n",
-    "        # save scores in tidy format\n",
+    "        \n",
+    "        # save scores\n",
+    "        # transpose data and reset index to make dataframe resemble tidy long format\n",
     "        score = score.T.reset_index()\n",
+    "        # change columns to their respective names\n",
     "        score.columns = [\"Phenotypic_Class\", \"F1_Score\"]\n",
     "        score.to_csv(score_save_path, sep=\"\\t\")"
    ]
