--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -21,7 +21,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
-    "from evaluate_utils import model_cm"
+    "from evaluate_utils import model_confusion_matrix"
    ]
   },
   {
@@ -163,7 +163,7 @@
     "        # path to save confusion matrix tidy data to\n",
     "        cm_save_path = pathlib.Path(f\"{cm_dir}/{model_name}__{label}__cm.tsv\")\n",
     "        \n",
-    "        cm = model_cm(model, data)\n",
+    "        cm = model_confusion_matrix(model, data)\n",
     "        \n",
     "        # use stack to restructure dataframe into tidy long format\n",
     "        cm_tidy_data = cm.stack()\n",
