update documentation, dave suggestions

--- a/3.evaluate_model/F1_scores.ipynb
+++ b/3.evaluate_model/F1_scores.ipynb
@@ -130,7 +130,7 @@
     "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
     "\n",
     "# use a list to keep track of scores in tidy long format for each model and dataset combination\n",
-    "tidy_scores = []\n",
+    "compiled_scores = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "for model_path in models_dir.iterdir():\n",
@@ -155,9 +155,9 @@
     "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
     "        score[\"data_split\"] = label\n",
     "        # add shuffled column to indicate if the model has been trained with shuffled data (random baseline) or not\n",
-    "        score[\"shuffled\"] = True if \"shuffled\" in model_name else False\n",
+    "        score[\"shuffled\"] = \"shuffled\" in model_name\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        tidy_scores.append(score)"
+    "        compiled_scores.append(score)"
    ]
   },
   {
@@ -306,20 +306,20 @@
    ],
    "source": [
     "# compile list of tidy data into one dataframe\n",
-    "tidy_scores = pd.concat(tidy_scores).reset_index(drop=True)\n",
+    "compiled_scores = pd.concat(compiled_scores).reset_index(drop=True)\n",
     "\n",
     "# specify results directory\n",
     "f1_scores_dir = pathlib.Path(\"evaluations/F1_scores/\")\n",
     "f1_scores_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "tidy_scores_save_path = pathlib.Path(f\"{f1_scores_dir}/compiled_F1_scores.tsv\")\n",
+    "compiled_scores_save_path = pathlib.Path(f\"{f1_scores_dir}/compiled_F1_scores.tsv\")\n",
     "\n",
     "# save data as tsv\n",
-    "tidy_scores.to_csv(tidy_scores_save_path, sep=\"\\t\")\n",
+    "compiled_scores.to_csv(compiled_scores_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "tidy_scores"
+    "compiled_scores"
    ]
   }
  ],
