--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -151,7 +151,7 @@
     "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
     "\n",
     "# use a list to keep track of scores in tidy long format for each model and dataset combination\n",
-    "tidy_cm_data = []\n",
+    "compiled_cm_data = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "for model_path in models_dir.iterdir():\n",
@@ -178,9 +178,9 @@
     "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
     "        cm_data[\"data_split\"] = label\n",
     "        # add shuffled column to indicate if the model has been trained with shuffled data (random baseline) or not\n",
-    "        cm_data[\"shuffled\"] = True if \"shuffled\" in model_name else False\n",
+    "        cm_data[\"shuffled\"] = \"shuffled\" in model_name\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        tidy_cm_data.append(cm_data)"
+    "        compiled_cm_data.append(cm_data)"
    ]
   },
   {
@@ -341,20 +341,20 @@
    ],
    "source": [
     "# compile list of tidy data into one dataframe\n",
-    "tidy_cm_data = pd.concat(tidy_cm_data).reset_index(drop=True)\n",
+    "compiled_cm_data = pd.concat(compiled_cm_data).reset_index(drop=True)\n",
     "\n",
     "# specify results directory\n",
     "cm_data_dir = pathlib.Path(\"evaluations/confusion_matrices/\")\n",
     "cm_data_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "tidy_cm_data_save_path = pathlib.Path(f\"{cm_data_dir}/compiled_cm_data.tsv\")\n",
+    "compiled_cm_data_save_path = pathlib.Path(f\"{cm_data_dir}/compiled_cm_data.tsv\")\n",
     "\n",
     "# save data as tsv\n",
-    "tidy_cm_data.to_csv(tidy_cm_data_save_path, sep=\"\\t\")\n",
+    "compiled_cm_data.to_csv(compiled_cm_data_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "tidy_cm_data"
+    "compiled_cm_data"
    ]
   }
  ],
