--- a/6.single_cell_images/correct_15_images.ipynb
+++ b/6.single_cell_images/correct_15_images.ipynb
@@ -274,11 +274,17 @@
     "\n",
     "# save paths of 15 images in tidy format\n",
     "# use melt to convert pandas dataframe to tidy long format and drop/rename to achieve desired format\n",
-    "tidy_15_images = pd.melt(correct_15_images, [\"Phenotypic_Class\"], ignore_index=True).sort_values([\"Phenotypic_Class\"]).reset_index(drop=True)\n",
+    "tidy_15_images = (\n",
+    "    pd.melt(correct_15_images, [\"Phenotypic_Class\"], ignore_index=True)\n",
+    "    .sort_values([\"Phenotypic_Class\"])\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "tidy_15_images = tidy_15_images.drop([\"variable\"], axis=1)\n",
     "tidy_15_images = tidy_15_images.rename(columns={\"value\": \"Correctly_Labled_Image_Path\"})\n",
     "\n",
-    "tidy_15_images_save_path = pathlib.Path(\"sample_image_paths/top_5_performing_classes.tsv\")\n",
+    "tidy_15_images_save_path = pathlib.Path(\n",
+    "    \"sample_image_paths/top_5_performing_classes.tsv\"\n",
+    ")\n",
     "tidy_15_images_save_path.parents[0].mkdir(parents=True, exist_ok=True)\n",
     "tidy_15_images.to_csv(tidy_15_images_save_path, sep=\"\\t\")\n",
     "\n",
