rerun evaluate module

--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -23,8 +23,7 @@
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data\n",
-    "from evaluate_utils import evaluate_model_cm, evaluate_model_score"
+    "from train_utils import get_dataset, get_X_y_data"
    ]
   },
   {
