--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -79,34 +79,41 @@
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "for model_path in models_dir.iterdir():\n",
     "    model = load(model_path)\n",
-    "    model_name = model_path.name.replace(\"log_reg_\",\"\").replace(\".joblib\",\"\")\n",
-    "    \n",
+    "    model_name = model_path.name.replace(\"log_reg_\", \"\").replace(\".joblib\", \"\")\n",
+    "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
     "        print(f\"Getting predictions for {model_name} on dataset {label}\")\n",
-    "        \n",
+    "\n",
     "        # get indexes of each cell being predicted for the dataset the cell is from\n",
-    "        dataset_indexes = data_split_indexes.loc[data_split_indexes[\"label\"] == label][\"index\"]\n",
-    "        \n",
+    "        dataset_indexes = data_split_indexes.loc[data_split_indexes[\"label\"] == label][\n",
+    "            \"index\"\n",
+    "        ]\n",
+    "\n",
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
-    "        \n",
+    "\n",
     "        # get features and labels dataframes\n",
     "        X, y = get_X_y_data(data)\n",
     "\n",
     "        # get predictions from model\n",
     "        y_pred = model.predict(X)\n",
-    "        \n",
-    "        # create dataframe with dataset index of cell being predicted, predicted phenotypic class, true phenotypic class, and which dataset/model is involved in prediction\n",
+    "\n",
+    "        # create dataframe with dataset index of cell being predicted, \n",
+    "        # predicted phenotypic class, \n",
+    "        # true phenotypic class, \n",
+    "        # and which dataset/models are involved in prediction\n",
     "        predictions_df = pd.DataFrame(\n",
-    "        {'Dataset_Index': dataset_indexes,\n",
-    "        'Phenotypic_Class_Predicted': y,\n",
-    "        'Phenotypic_Class_True': y_pred,\n",
-    "        'data_split': label,\n",
-    "        \"shuffled\": \"shuffled\" in model_name\n",
-    "        })\n",
-    "        \n",
+    "            {\n",
+    "                \"Dataset_Index\": dataset_indexes,\n",
+    "                \"Phenotypic_Class_Predicted\": y,\n",
+    "                \"Phenotypic_Class_True\": y_pred,\n",
+    "                \"data_split\": label,\n",
+    "                \"shuffled\": \"shuffled\" in model_name,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
     "        compiled_predictions.append(predictions_df)"
    ]
   },
