restructure PR curves notebook

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -57,6 +57,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# directory to load the models from\n",
+    "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
+    "\n",
+    "# use a list to keep track of scores in tidy long format for each model and dataset combination\n",
+    "compiled_class_PR_curves = []\n",
+    "\n",
+    "# iterate through each model (final model, shuffled baseline model, etc)\n",
+    "for model_path in models_dir.iterdir():\n",
+    "    model = load(model_path)\n",
+    "    model_name = model_path.name.replace(\"log_reg_\",\"\").replace(\".joblib\",\"\")\n",
+    "    \n",
+    "    # iterate through label datasets (labels correspond to train, test, etc)\n",
+    "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
+    "    for label in data_split_indexes[\"label\"].unique():\n",
+    "        print(f\"Evaluating {model_name} on dataset {label}\")\n",
+    "        \n",
+    "        # load dataset (train, test, etc)\n",
+    "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
+    "        # find model F1 scores on dataset\n",
+    "        score = model_F1_score(model, data)\n",
+    "        \n",
+    "        fig, PR_data = class_PR_curves(train_data, log_reg_model)\n",
+    "        fig.suptitle(\"Precision Recall Curves for Final Model on Training Data\")\n",
+    "        fig.show()\n",
+    "        \n",
+    "        break\n",
+    "        \n",
+    "        # add score data to compiled dataframe in tidy format\n",
+    "        # transpose data and reset index to make dataframe resemble tidy long format\n",
+    "        score = score.T.reset_index()\n",
+    "        # change columns to their respective names\n",
+    "        score.columns = [\"Phenotypic_Class\", \"F1_Score\"]\n",
+    "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
+    "        score[\"data_split\"] = label\n",
+    "        # add shuffled column to indicate if the model has been trained with shuffled data (random baseline) or not\n",
+    "        score[\"shuffled\"] = \"shuffled\" in model_name\n",
+    "        # add this score data to the tidy scores compiling list\n",
+    "        compiled_scores.append(score)\n",
+    "        \n",
+    "    break"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
