--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -158,11 +158,10 @@
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
     "        \n",
+    "        # get class PR curve data and show curve\n",
     "        fig, PR_data = class_PR_curves(data, model)\n",
     "        fig.suptitle(f\"Precision Recall Curves for {model_name} on Dataset {label}\")\n",
     "        plt.show()\n",
-    "        \n",
-    "        # add score data to compiled dataframe in tidy format\n",
     "        \n",
     "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
     "        PR_data[\"data_split\"] = label\n",
