--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import pathlib"
+    "import pathlib\n",
+    "import pandas as pd"
    ]
   },
   {
