--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,14 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pathlib\n",
-    "\n",
     "from sklearn.utils import shuffle\n",
     "\n",
     "import sys\n",
@@ -35,56 +34,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5460, 1292)\n"
+      "(2862, 1456)\n"
      ]
     }
    ],
    "source": [
     "# load x (features) and y (labels) dataframes\n",
-    "load_path = pathlib.Path(\"../0.download_data/data/training_data.csv.gz\")\n",
-    "training_data = get_features_data(load_path)\n",
-    "print(training_data.shape)\n",
-    "\n",
-    "# ratio of data to be reserved for testing (ex 0.15 = 15%)\n",
-    "test_ratio = 0.15"
+    "labeled_data_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
+    "labeled_data = get_features_data(labeled_data_path)\n",
+    "print(labeled_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4640, 1292)\n"
+      "Training data has shape: (2432, 1456)\n",
+      "Testing data has shape: (430, 1456)\n"
      ]
     }
    ],
    "source": [
+    "# ratio of data to be reserved for testing (ex 0.15 = 15%)\n",
+    "test_ratio = 0.15\n",
+    "\n",
     "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
-    "test_data = training_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
+    "testing_data = labeled_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
     "    lambda x: x.sample(frac=test_ratio)\n",
     ")\n",
-    "test_indexes = test_data.index\n",
-    "# remove test indexes\n",
-    "training_data = training_data.drop(pd.Index(data=test_indexes))\n",
+    "test_indexes = testing_data.index\n",
     "\n",
+    "# training data is labeled data - test data\n",
+    "training_data = labeled_data.drop(pd.Index(data=test_indexes))\n",
     "train_indexes = np.array(training_data.index)\n",
-    "print(training_data.shape)"
+    "\n",
+    "print(f\"Training data has shape: {training_data.shape}\")\n",
+    "print(f\"Testing data has shape: {testing_data.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,35 +110,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>labeled_data_index</th>\n",
        "      <th>label</th>\n",
-       "      <th>index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>test</td>\n",
-       "      <td>1785</td>\n",
+       "      <th>430</th>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>test</td>\n",
-       "      <td>4524</td>\n",
+       "      <th>431</th>\n",
+       "      <td>1</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>test</td>\n",
-       "      <td>1045</td>\n",
+       "      <th>432</th>\n",
+       "      <td>2</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>205</th>\n",
+       "      <td>3</td>\n",
        "      <td>test</td>\n",
-       "      <td>1046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>test</td>\n",
-       "      <td>3474</td>\n",
+       "      <th>433</th>\n",
+       "      <td>4</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -144,53 +146,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5455</th>\n",
+       "      <th>2857</th>\n",
+       "      <td>2911</td>\n",
        "      <td>train</td>\n",
-       "      <td>5518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5456</th>\n",
+       "      <th>2858</th>\n",
+       "      <td>2912</td>\n",
        "      <td>train</td>\n",
-       "      <td>5519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5457</th>\n",
+       "      <th>2859</th>\n",
+       "      <td>2913</td>\n",
        "      <td>train</td>\n",
-       "      <td>5520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5458</th>\n",
+       "      <th>2860</th>\n",
+       "      <td>2914</td>\n",
        "      <td>train</td>\n",
-       "      <td>5521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5459</th>\n",
+       "      <th>2861</th>\n",
+       "      <td>2915</td>\n",
        "      <td>train</td>\n",
-       "      <td>5522</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5460 rows × 2 columns</p>\n",
+       "<p>2862 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      label  index\n",
-       "0      test   1785\n",
-       "1      test   4524\n",
-       "2      test   1045\n",
-       "3      test   1046\n",
-       "4      test   3474\n",
-       "...     ...    ...\n",
-       "5455  train   5518\n",
-       "5456  train   5519\n",
-       "5457  train   5520\n",
-       "5458  train   5521\n",
-       "5459  train   5522\n",
+       "      labeled_data_index  label\n",
+       "430                    0  train\n",
+       "431                    1  train\n",
+       "432                    2  train\n",
+       "205                    3   test\n",
+       "433                    4  train\n",
+       "...                  ...    ...\n",
+       "2857                2911  train\n",
+       "2858                2912  train\n",
+       "2859                2913  train\n",
+       "2860                2914  train\n",
+       "2861                2915  train\n",
        "\n",
-       "[5460 rows x 2 columns]"
+       "[2862 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +201,13 @@
     "# create pandas dataframe with all indexes and their respective labels\n",
     "index_data = []\n",
     "for index in test_indexes:\n",
-    "    index_data.append({\"label\": \"test\", \"index\": index})\n",
+    "    index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
     "for index in train_indexes:\n",
-    "    index_data.append({\"label\": \"train\", \"index\": index})\n",
+    "    index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
     "index_data = pd.DataFrame(index_data)\n",
+    "# put indexes into sorted order\n",
+    "index_data = index_data.sort_values([\"labeled_data_index\"])\n",
+    "\n",
     "index_data"
    ]
   },
@@ -215,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
