--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,14 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pathlib\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.utils import shuffle\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -67,18 +66,13 @@
     }
    ],
    "source": [
-    "# ratio of data to be reserved for testing (ex 0.15 = 15%)\n",
+    "# ratio of data to be used for testing (ex 0.15 = 15%)\n",
     "test_ratio = 0.15\n",
     "\n",
-    "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
-    "testing_data = labeled_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
-    "    lambda x: x.sample(frac=test_ratio)\n",
-    ")\n",
-    "test_indexes = testing_data.index\n",
-    "\n",
-    "# training data is labeled data - test data\n",
-    "training_data = labeled_data.drop(pd.Index(data=test_indexes))\n",
-    "train_indexes = np.array(training_data.index)\n",
+    "# get indexes of training and testing data\n",
+    "training_data, testing_data = train_test_split(labeled_data, test_size=test_ratio, random_state=0)\n",
+    "train_indexes = training_data.index.to_numpy()\n",
+    "test_indexes = testing_data.index.to_numpy()\n",
     "\n",
     "print(f\"Training data has shape: {training_data.shape}\")\n",
     "print(f\"Testing data has shape: {testing_data.shape}\")"
@@ -86,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -116,27 +110,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>430</th>\n",
+       "      <th>1986</th>\n",
        "      <td>0</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>431</th>\n",
+       "      <th>384</th>\n",
        "      <td>1</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>432</th>\n",
+       "      <th>1042</th>\n",
        "      <td>2</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
+       "      <th>2017</th>\n",
        "      <td>3</td>\n",
-       "      <td>test</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>433</th>\n",
+       "      <th>231</th>\n",
        "      <td>4</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -146,27 +140,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2857</th>\n",
+       "      <th>965</th>\n",
        "      <td>2911</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2858</th>\n",
+       "      <th>1331</th>\n",
        "      <td>2912</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2859</th>\n",
+       "      <th>1664</th>\n",
        "      <td>2913</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2860</th>\n",
+       "      <th>2508</th>\n",
        "      <td>2914</td>\n",
-       "      <td>train</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2861</th>\n",
+       "      <th>225</th>\n",
        "      <td>2915</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -177,22 +171,22 @@
       ],
       "text/plain": [
        "      labeled_data_index  label\n",
-       "430                    0  train\n",
-       "431                    1  train\n",
-       "432                    2  train\n",
-       "205                    3   test\n",
-       "433                    4  train\n",
+       "1986                   0  train\n",
+       "384                    1  train\n",
+       "1042                   2  train\n",
+       "2017                   3  train\n",
+       "231                    4  train\n",
        "...                  ...    ...\n",
-       "2857                2911  train\n",
-       "2858                2912  train\n",
-       "2859                2913  train\n",
-       "2860                2914  train\n",
-       "2861                2915  train\n",
+       "965                 2911  train\n",
+       "1331                2912  train\n",
+       "1664                2913  train\n",
+       "2508                2914   test\n",
+       "225                 2915  train\n",
        "\n",
        "[2862 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,13 +194,16 @@
    "source": [
     "# create pandas dataframe with all indexes and their respective labels\n",
     "index_data = []\n",
-    "for index in test_indexes:\n",
-    "    index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
     "for index in train_indexes:\n",
     "    index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
-    "index_data = pd.DataFrame(index_data)\n",
-    "# put indexes into sorted order\n",
-    "index_data = index_data.sort_values([\"labeled_data_index\"])\n",
+    "for index in test_indexes:\n",
+    "    index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
+    "\n",
+    "# make index data a dataframe and sort it by labeled data index\n",
+    "index_data = (\n",
+    "    pd.DataFrame(index_data)\n",
+    "    .sort_values([\"labeled_data_index\"])\n",
+    ")\n",
     "\n",
     "index_data"
    ]
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
