--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -15,11 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import pathlib\n",
-    "\n",
-    "from sklearn.utils import shuffle\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
@@ -42,18 +40,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5460, 1292)\n"
+      "(2862, 1456)\n"
      ]
     }
    ],
    "source": [
     "# load x (features) and y (labels) dataframes\n",
-    "load_path = pathlib.Path(\"../0.download_data/data/training_data.csv.gz\")\n",
-    "training_data = get_features_data(load_path)\n",
-    "print(training_data.shape)\n",
-    "\n",
-    "# ratio of data to be reserved for testing (ex 0.15 = 15%)\n",
-    "test_ratio = 0.15"
+    "labeled_data_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
+    "labeled_data = get_features_data(labeled_data_path)\n",
+    "print(labeled_data.shape)"
    ]
   },
   {
@@ -65,21 +60,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4640, 1292)\n"
+      "Training data has shape: (2432, 1456)\n",
+      "Testing data has shape: (430, 1456)\n"
      ]
     }
    ],
    "source": [
-    "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
-    "test_data = training_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
-    "    lambda x: x.sample(frac=test_ratio)\n",
-    ")\n",
-    "test_indexes = test_data.index\n",
-    "# remove test indexes\n",
-    "training_data = training_data.drop(pd.Index(data=test_indexes))\n",
+    "# ratio of data to be used for testing (ex 0.15 = 15%)\n",
+    "test_ratio = 0.15\n",
     "\n",
-    "train_indexes = np.array(training_data.index)\n",
-    "print(training_data.shape)"
+    "# get indexes of training and testing data\n",
+    "training_data, testing_data = train_test_split(labeled_data, test_size=test_ratio, random_state=0)\n",
+    "train_indexes = training_data.index.to_numpy()\n",
+    "test_indexes = testing_data.index.to_numpy()\n",
+    "\n",
+    "print(f\"Training data has shape: {training_data.shape}\")\n",
+    "print(f\"Testing data has shape: {testing_data.shape}\")"
    ]
   },
   {
@@ -108,35 +104,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>labeled_data_index</th>\n",
        "      <th>label</th>\n",
-       "      <th>index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>test</td>\n",
-       "      <td>1785</td>\n",
+       "      <th>1986</th>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>test</td>\n",
-       "      <td>4524</td>\n",
+       "      <th>384</th>\n",
+       "      <td>1</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>test</td>\n",
-       "      <td>1045</td>\n",
+       "      <th>1042</th>\n",
+       "      <td>2</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>test</td>\n",
-       "      <td>1046</td>\n",
+       "      <th>2017</th>\n",
+       "      <td>3</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>test</td>\n",
-       "      <td>3474</td>\n",
+       "      <th>231</th>\n",
+       "      <td>4</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -144,50 +140,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5455</th>\n",
+       "      <th>965</th>\n",
+       "      <td>2911</td>\n",
        "      <td>train</td>\n",
-       "      <td>5518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5456</th>\n",
+       "      <th>1331</th>\n",
+       "      <td>2912</td>\n",
        "      <td>train</td>\n",
-       "      <td>5519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5457</th>\n",
+       "      <th>1664</th>\n",
+       "      <td>2913</td>\n",
        "      <td>train</td>\n",
-       "      <td>5520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5458</th>\n",
-       "      <td>train</td>\n",
-       "      <td>5521</td>\n",
+       "      <th>2508</th>\n",
+       "      <td>2914</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5459</th>\n",
+       "      <th>225</th>\n",
+       "      <td>2915</td>\n",
        "      <td>train</td>\n",
-       "      <td>5522</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5460 rows × 2 columns</p>\n",
+       "<p>2862 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      label  index\n",
-       "0      test   1785\n",
-       "1      test   4524\n",
-       "2      test   1045\n",
-       "3      test   1046\n",
-       "4      test   3474\n",
-       "...     ...    ...\n",
-       "5455  train   5518\n",
-       "5456  train   5519\n",
-       "5457  train   5520\n",
-       "5458  train   5521\n",
-       "5459  train   5522\n",
+       "      labeled_data_index  label\n",
+       "1986                   0  train\n",
+       "384                    1  train\n",
+       "1042                   2  train\n",
+       "2017                   3  train\n",
+       "231                    4  train\n",
+       "...                  ...    ...\n",
+       "965                 2911  train\n",
+       "1331                2912  train\n",
+       "1664                2913  train\n",
+       "2508                2914   test\n",
+       "225                 2915  train\n",
        "\n",
-       "[5460 rows x 2 columns]"
+       "[2862 rows x 2 columns]"
       ]
      },
      "execution_count": 9,
@@ -198,11 +194,17 @@
    "source": [
     "# create pandas dataframe with all indexes and their respective labels\n",
     "index_data = []\n",
-    "for index in test_indexes:\n",
-    "    index_data.append({\"label\": \"test\", \"index\": index})\n",
     "for index in train_indexes:\n",
-    "    index_data.append({\"label\": \"train\", \"index\": index})\n",
-    "index_data = pd.DataFrame(index_data)\n",
+    "    index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
+    "for index in test_indexes:\n",
+    "    index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
+    "\n",
+    "# make index data a dataframe and sort it by labeled data index\n",
+    "index_data = (\n",
+    "    pd.DataFrame(index_data)\n",
+    "    .sort_values([\"labeled_data_index\"])\n",
+    ")\n",
+    "\n",
     "index_data"
    ]
   },
