use straify function

--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,12 @@
     "test_ratio = 0.15\n",
     "\n",
     "# get indexes of training and testing data\n",
-    "training_data, testing_data = train_test_split(labeled_data, test_size=test_ratio, random_state=0)\n",
+    "training_data, testing_data = train_test_split(\n",
+    "    labeled_data,\n",
+    "    test_size=test_ratio,\n",
+    "    stratify=labeled_data[[\"Mitocheck_Phenotypic_Class\"]],\n",
+    "    random_state=1,\n",
+    ")\n",
     "train_indexes = training_data.index.to_numpy()\n",
     "test_indexes = testing_data.index.to_numpy()\n",
     "\n",
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,27 +115,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1986</th>\n",
+       "      <th>2092</th>\n",
        "      <td>0</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>384</th>\n",
+       "      <th>1412</th>\n",
        "      <td>1</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1042</th>\n",
+       "      <th>1064</th>\n",
        "      <td>2</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017</th>\n",
+       "      <th>764</th>\n",
        "      <td>3</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
+       "      <th>2410</th>\n",
        "      <td>4</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -140,27 +145,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>965</th>\n",
+       "      <th>2254</th>\n",
        "      <td>2911</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1331</th>\n",
+       "      <th>580</th>\n",
        "      <td>2912</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1664</th>\n",
+       "      <th>1753</th>\n",
        "      <td>2913</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2508</th>\n",
+       "      <th>629</th>\n",
        "      <td>2914</td>\n",
-       "      <td>test</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225</th>\n",
+       "      <th>794</th>\n",
        "      <td>2915</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -171,28 +176,28 @@
       ],
       "text/plain": [
        "      labeled_data_index  label\n",
-       "1986                   0  train\n",
-       "384                    1  train\n",
-       "1042                   2  train\n",
-       "2017                   3  train\n",
-       "231                    4  train\n",
+       "2092                   0  train\n",
+       "1412                   1  train\n",
+       "1064                   2  train\n",
+       "764                    3  train\n",
+       "2410                   4  train\n",
        "...                  ...    ...\n",
-       "965                 2911  train\n",
-       "1331                2912  train\n",
-       "1664                2913  train\n",
-       "2508                2914   test\n",
-       "225                 2915  train\n",
+       "2254                2911  train\n",
+       "580                 2912  train\n",
+       "1753                2913  train\n",
+       "629                 2914  train\n",
+       "794                 2915  train\n",
        "\n",
        "[2862 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create pandas dataframe with all indexes and their respective labels\n",
+    "# create pandas dataframe with all indexes and their respective labels, stratified by phenotypic class\n",
     "index_data = []\n",
     "for index in train_indexes:\n",
     "    index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
@@ -217,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
